RESOLVED FIXED11693
fix the Qt build
https://bugs.webkit.org/show_bug.cgi?id=11693
Summary fix the Qt build
Simon Hausmann
Reported 2006-11-26 02:03:14 PST
This patch fixes the Qt build, adapts it to various renamings of enums, classes and methods.
Attachments
fix the Qt build (8.17 KB, patch)
2006-11-26 02:04 PST, Simon Hausmann
aroben: review+
Simon Hausmann
Comment 1 2006-11-26 02:04:33 PST
Created attachment 11632 [details] fix the Qt build
Adam Roben (:aroben)
Comment 2 2006-11-26 02:08:16 PST
Comment on attachment 11632 [details] fix the Qt build r=me
Maciej Stachowiak
Comment 3 2006-11-26 02:11:35 PST
Comment on attachment 11632 [details] fix the Qt build r=me
mitz
Comment 4 2006-11-26 06:06:38 PST
Landed by Rob in r17880.
Note You need to log in before you can comment on or make changes to this bug.