        Reviewed by Maciej.

http://bugs.webkit.org/show_bug.cgi?id=11693
        Fix the Qt build, adapt to various enum/class renamings.



Canonical link: https://commits.webkit.org/15033@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@17880 268f45cc-cd09-0410-ab3c-d52691b4dbfc