WebCore/kcanvas/device/qt/KRenderingDeviceQt.h
@@ -26,6 +26,7 @@
 #include <QPainter>
 #include <QPainterPath>
 
+#include "Path.h"
 #include "KRenderingDevice.h"
 
 namespace WebCore {
@@ -78,7 +79,7 @@ public:
 
     // Resource creation
     virtual PassRefPtr<SVGResource> createResource(const SVGResourceType&) const;
-    virtual PassRefPtr<KRenderingPaintServer> createPaintServer(const KCPaintServerType&) const;
+    virtual PassRefPtr<SVGPaintServer> createPaintServer(const SVGPaintServerType&) const;
     virtual SVGFilterEffect* createFilterEffect(const SVGFilterEffectType&) const;
 };
 
