WebCore/platform/graphics/svg/qt/SVGPaintServerQt.cpp
@@ -85,10 +85,10 @@ void SVGPaintServer::renderPath(KRenderingDeviceContext* context, const RenderPa
     RenderStyle* renderStyle = path->style();
     KRenderingDeviceContextQt* qtContext = static_cast<KRenderingDeviceContextQt*>(context);
 
-    if ((type & APPLY_TO_FILL) && renderStyle->svgStyle()->hasFill())
+    if ((type & ApplyToFillTargetType) && renderStyle->svgStyle()->hasFill())
         qtContext->fillPath();
 
-    if ((type & APPLY_TO_STROKE) && renderStyle->svgStyle()->hasStroke())
+    if ((type & ApplyToStrokeTargetType) && renderStyle->svgStyle()->hasStroke())
         qtContext->strokePath();
 }
 
