WebCore/platform/graphics/svg/qt/SVGPaintServerRadialGradientQt.cpp
@@ -102,7 +102,7 @@ bool SVGPaintServerRadialGradient:: setup(KRenderingDeviceContext* context, cons
     // gradientTrans.map(cx, cy, &cx, &cy);
     // qtContext->painter().setMatrix(mat);
 
-    if ((type & APPLY_TO_FILL) && renderStyle->svgStyle()->hasFill()) {
+    if ((type & ApplyToFillTargetType) && renderStyle->svgStyle()->hasFill()) {
         fillColorArray(gradient, gradientStops(), opacity);
 
         QBrush brush(gradient);
@@ -111,7 +111,7 @@ bool SVGPaintServerRadialGradient:: setup(KRenderingDeviceContext* context, cons
         qtContext->setFillRule(renderStyle->svgStyle()->fillRule());
     }
 
-    if ((type & APPLY_TO_STROKE) && renderStyle->svgStyle()->hasStroke()) {
+    if ((type & ApplyToStrokeTargetType) && renderStyle->svgStyle()->hasStroke()) {
         fillColorArray(gradient, gradientStops(), opacity);
 
         QPen pen;
